--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,8 @@ h1 {
 body {
 font-family: 'Changa', sans-serif;
 background-color: white;
+height: 100vh;
+overflow: hidden;
 }
 .main {
     text-align: center;
@@ -33,7 +35,7 @@ background-color: white;
 }
 .footer {
     position: fixed;
-    bottom: 0;
+    bottom: 5%;
     width: 100%;
     color: white;
     text-shadow: 2px 2px 0px rgb(32, 32, 189);
