--- a/styles.css
+++ b/styles.css
@@ -26,12 +26,15 @@ overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('https://cdn.discordapp.com/attachments/831582032953868303/895974354863661135/241007356_188321876726877_6640712977784325212_n.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     flex-wrap: wrap;
-    box-shadow: inset 0em -6em 10em 100px   rgba(36, 5, 5, 0.295);    
+    animation-name: backgroundChanger;
+    animation-iteration-count: infinite;
+  animation-duration: 10s;
+    box-shadow: inset 0px -300px 300px black
+
 }
 .footer {
     position: fixed;
@@ -49,5 +52,27 @@ overflow: hidden;
 @media only screen and (max-width: 700px) {
     h1 {
         font-size: 18vw;
+    }
+} 
+
+@keyframes backgroundChanger  {
+    0% {
+        background-image: url('https://cdn.discordapp.com/attachments/831582032953868303/896026438384365598/Remini20211008162731070.jpg');
+    }
+    20% {
+        background-image: url('https://cdn.discordapp.com/attachments/831582032953868303/895974354863661135/241007356_188321876726877_6640712977784325212_n.jpg');
+    }
+    40% {
+        background-image: url('https://cdn.discordapp.com/attachments/831582032953868303/896031921899966514/Remini20211008164916071.jpg');
+    }
+    60% {
+        background-image: url('https://cdn.discordapp.com/attachments/831582032953868303/896029788622426142/Remini20210926123931875.jpg');
+    }
+    80% {
+        background-image: url('https://scontent.fbey14-1.fna.fbcdn.net/v/t31.18172-8/11953448_1647331845508477_665320988836976644_o.jpg?_nc_cat=111&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=2a3PuqJlVvsAX9cpmZ3&_nc_ht=scontent.fbey14-1.fna&oh=0ed89d9975a783945a4dc9906b2c5c60&oe=61845608');
+    }
+    100% {
+        background-image: url('https://cdn.discordapp.com/attachments/831582032953868303/896026438384365598/Remini20211008162731070.jpg');
+
     }
 }
