--- a/styles.css
+++ b/styles.css
@@ -1,83 +1,36 @@
-h1 {
-    color: white;
-    font-size: 8vw;
-    text-shadow: 2px 2px 0px rgb(32, 32, 189);
-}
-.btn {
-    font-size: 20px;
-    margin-top: 20px;
-    transition: all .5s ease;
-}
-.btn:hover {
-   transform: translateY(-10px);
-   box-shadow: 0px 5px 0px white;
-   
-}
-body {
-font-family: 'Changa', sans-serif;
-background-color: white;
-height: 100vh;
-overflow: hidden;
+* {
+  margin: 0;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
 }
 .main {
-    text-align: center;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    flex-wrap: wrap;
-    animation-name: backgroundChanger;
-    animation-iteration-count: infinite;
-  animation-duration: 10s;
-    box-shadow: inset 0px -300px 300px black
-
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  background: url("https://media.istockphoto.com/photos/red-background-wall-picture-id533498965?b=1&k=20&m=533498965&s=170667a&w=0&h=dzUr7tzNoFCPN-c4Ux2TLtMRUCSC0_7jpEBled-aNwM=");
+  align-items: center;
+  animation: animate 10s linear infinite;
 }
-.footer {
-    position: fixed;
-    bottom: 5%;
-    width: 100%;
-    color: white;
-    text-shadow: 2px 2px 0px rgb(32, 32, 189);
-    text-align: center;
+@keyframes animate {
+  0% {
+    transform: scale(2) rotate(0deg);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(2.5) rotate(180deg);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(3) rotate(360deg);
+    opacity: 0;
+  }
 }
-
-* {
-    margin: 0;
-    user-select: none;
-}
-@media only screen and (max-width: 700px) {
-    h1 {
-        font-size: 18vw;
-    }
-    .main {
-        animation: none;
-        background-position: right;
-        background-image: url('https://cdn.discordapp.com/attachments/831582032953868303/896029788622426142/Remini20210926123931875.jpg');
-    }
-} 
-
-@keyframes backgroundChanger  {
-    0% {
-        background-image: url('https://cdn.discordapp.com/attachments/831582032953868303/896026438384365598/Remini20211008162731070.jpg');
-    }
-    20% {
-        background-image: url('https://cdn.discordapp.com/attachments/831582032953868303/895974354863661135/241007356_188321876726877_6640712977784325212_n.jpg');
-    }
-    40% {
-        background-image: url('https://cdn.discordapp.com/attachments/831582032953868303/896031921899966514/Remini20211008164916071.jpg');
-    }
-    60% {
-        background-image: url('https://cdn.discordapp.com/attachments/831582032953868303/896029788622426142/Remini20210926123931875.jpg');
-    }
-    80% {
-        background-image: url('https://scontent.fbey14-1.fna.fbcdn.net/v/t31.18172-8/11953448_1647331845508477_665320988836976644_o.jpg?_nc_cat=111&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=2a3PuqJlVvsAX9cpmZ3&_nc_ht=scontent.fbey14-1.fna&oh=0ed89d9975a783945a4dc9906b2c5c60&oe=61845608');
-    }
-    100% {
-        background-image: url('https://cdn.discordapp.com/attachments/831582032953868303/896026438384365598/Remini20211008162731070.jpg');
-
-    }
+img {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: auto;
 }
